--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -27,6 +27,10 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_http_version 1.1;
+        # Disable timeouts to keep set-websockets alive
+        # even if nothing is set for a long time
+        proxy_read_timeout 7d;
+        #proxy_send_timeout 7d;
     }
 }
 
