--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
     "react-router-dom": "^6.25.1",
+    "react-use-websocket": "^4.8.1",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
