--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,13 +1,8 @@
-server {
-    listen 443 ssl;
-    server_name _;  # Matches any hostname or IP
-    
-    ssl_certificate /etc/nginx/certs/localhost+3.pem;
-    ssl_certificate_key /etc/nginx/certs/localhost+3-key.pem;
+# /etc/nginx/conf.d/default.conf
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256";
+server {
+    listen 80;
+    server_name _;  # Matches any hostname or IP
 
     root /usr/share/nginx/html;
     index index.html;
@@ -32,12 +27,4 @@ server {
         proxy_read_timeout 7d;
         #proxy_send_timeout 7d;
     }
-}
-
-# Redirect HTTP to HTTPS
-server {
-    listen 80;
-    server_name _;
-
-    return 301 https://$host$request_uri;
 }
