--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@emotion/styled": "^11.12.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
+    "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "react-use-websocket": "^4.8.1",
     "use-local-storage": "^3.0.0"
