--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@emotion/styled": "^11.12.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
-    "npm": "^10.8.3",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
     "react-icons": "^5.3.0",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@types/react-grid-layout": "^1.3.5",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
