--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
+    "fuse.js": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
