--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
     "@hello-pangea/dnd": "^17.0.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
     "fuse.js": "^7.1.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.25.1",
     "react-use-websocket": "^4.8.1",
     "use-local-storage": "^3.0.0"
