--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
-    "react-grid-layout": "^1.4.4",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "react-use-websocket": "^4.8.1",
@@ -39,6 +38,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.77.8",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
